--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div>
+  My current favourite song is <a href="https://youtu.be/BddP6PYo2gs">Kesariya - Brahmāstra</a>.
+</div>
 
 </body>
 
